--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ r_github_packages:
 warnings_are_errors: false
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - Rscript -e 'library(covr);codecov()'
