--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,13 @@ language: r
 sudo: false
 cache: packages
 
+os:
+  - linux
+
+repos:
+  CRAN: https://cloud.r-project.org
+
+warnings_are_errors: false
+
 after_success:
   - Rscript -e 'library(covr);codecov()'
