--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ os:
 r_github_packages:
   - ludovikcoba/rrecsys
 
-warnings_are_errors: false
+warnings_are_errors: true
 
 after_success:
   - Rscript -e 'library(covr);codecov()'
