--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,3 +52,4 @@ importFrom("proxy", "simil")
 importFrom("MASS", "ginv")
 importFrom("stats", "rnorm")
 importFrom(Rcpp, evalCpp)
+importFrom("stats", "var")
