--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,5 +51,5 @@ import("methods",
 importFrom("proxy", "simil")
 importFrom("MASS", "ginv")
 importFrom("stats", "rnorm")
-importFrom(Rcpp, evalCpp)
+importFrom("Rcpp", "evalCpp")
 importFrom("stats", "var")
